app/renderer-process/scss/file-drag-overlay.scss
#file-drag-overlay {
    background-color: rgba(white, 30%);    
    height: 100%;
    width: 100%;
    border:.3em dashed #e5e5e5;
    border-radius: 8px;
    position:absolute;
    top:0;
    left: 0;
    opacity: 0;
    z-index: -1;
    transition: .2s;
    display:flex;
    justify-content: center;
    &.file-dragging {
        opacity: 1;
        z-index:9999;
    }
}

.content.file-dragging {
    overflow:hidden;
}

